# Soundwave_AI

./: .gitignore  .replit  AUTH_FIX_REPORT.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  backend_structure.txt  db_benchmark.py  docker-compose.yml  frontend_structure.txt  openapi.json  package-lock.json  package.json  pyproject.toml  run_app.py  search_analyser.py  search_energy.py  search_sleep.py  start-docker.bat  start-flask.bat  start.bat  stop-docker.bat  stop.bat
.upm/: store.json
backend/: .env  .env.example  add_play_history.py  auth.py  deezer_service.py  flask_app.py  google_auth.py  import_local_songs.py  lyrics.py  requirements.txt  seed_data.py  soundwave.db  spotify_search.py
backend/app/: config.py  database.py  main.py  sqlite_db.py
backend/app/middleware/: security.py
backend/app/routes/: analysis.py  analytics.py  auth.py  avatars.py  discover.py  playlists.py  recommendations.py  songs.py  workspace.py
backend/app/schemas/: analysis.py  auth.py  avatars.py  common.py  discover.py  music.py  playlist.py  workspace.py
backend/app/services/: analytics_service.py  auth_service.py  avatar_service.py  deezer_service.py  google_auth_service.py  (+3 more)
backend/templates/: base.html  login.html  search.html  signup.html
backend/tests/: test_auth_analysis.py  test_recommendations_dashboard.py  test_recommendations_route.py
frontend/: .env  .env.example  deploy.txt  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  main.jsx
scripts/: run-backend.js  setup-backend.js
(+82 files in other folders)
