[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi>=0.136.3",
    "flask>=3.1.3",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "httpx>=0.28.1",
    "lyricsgenius>=3.12.2",
    "motor>=3.7.1",
    "numpy>=2.4.6",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "redis>=8.0.0",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "spotipy>=2.26.0",
    "uvicorn[standard]>=0.49.0",
]
